tests/sources/invalid/borrow/constructor_borrow_move_errors.fire
// Borrowed constructor argument move errors

import @firescript/std.io.println;

class Wrapper {
    string text;

    Wrapper(&mut this, string text) {
        this.text = text;
    }
}

void badMoves(&string s) {
    Wrapper a = Wrapper(s);      // Error: cannot move borrowed value into constructor param  //~ ERROR FS-SEM-0001 @25
    Wrapper b = new Wrapper(s);  // Error: cannot move borrowed value into constructor param  //~ ERROR FS-SEM-0001 @29
    println(a.text);
    println(b.text);
}

string src = "borrowed";
badMoves(src);
